// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner renders correctly with a button 1`] = `
<DocumentFragment>
  .cache-1n9wgfw-Container-styles {
  padding: 24px;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 16px;
  background: #f1eefc;
  -webkit-background-position: right;
  background-position: right;
  background-repeat: no-repeat;
  -webkit-background-size: contain;
  background-size: contain;
}

.cache-1n9wgfw-Container-styles>svg:first-child,
.cache-1n9wgfw-Container-styles>img {
  height: 140px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.cache-1n9wgfw-Container-styles button[name='close'] {
  background: none;
}

.cache-1n9wgfw-Container-styles button[name='close']:hover {
  background: none;
}

.cache-hmn6z8-Stack-ImageStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 140px;
}

.cache-19d60zd-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1yytme-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-dwidc8-StyledText {
  color: #641cb3;
  font-size: 21px;
  font-family: Space Grotesk,Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-qnqg38-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1hgmfcr-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-187g71g-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 40px;
  padding: 0 12px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: #8c40ef;
  border: none;
  color: #ffffff;
}

.cache-187g71g-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-187g71g-StyledFilledButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-187g71g-StyledFilledButton:hover,
.cache-187g71g-StyledFilledButton:active {
  background: #792dd4;
  color: #f9f9fa;
}

.cache-1xcp86l-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.cache-1xcp86l-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1xcp86l-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-1xcp86l-StyledGhostButton:hover,
.cache-1xcp86l-StyledGhostButton:active {
  background: #e9eaeb;
  color: #222638;
}

.cache-1ah7xw8-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    class="cache-1n9wgfw-Container-styles e1kdwp5x1"
  >
    <div
      class="cache-hmn6z8-Stack-ImageStack e1kdwp5x0"
    >
      <img
        alt=""
        src="test-file-stub"
      />
    </div>
    <div
      class="cache-19d60zd-Stack ehpbis70"
      style="flex: 1;"
    >
      <div
        class="cache-1yytme-Stack ehpbis70"
        style="flex: 1;"
      >
        <p
          class="cache-dwidc8-StyledText e13y3mga0"
        >
          Title
        </p>
        <p
          class="cache-qnqg38-StyledText e13y3mga0"
        >
          Description
        </p>
      </div>
      <div
        class="cache-1hgmfcr-Stack ehpbis70"
      >
        <button
          class="cache-187g71g-StyledFilledButton e112qvla2"
          type="button"
        >
          Button
        </button>
      </div>
    </div>
    <button
      class="cache-1xcp86l-StyledGhostButton e112qvla0"
      name="close"
      type="button"
    >
      <svg
        class="cache-1ah7xw8-sizeStyles e1gt4cfo0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Banner renders correctly with a link 1`] = `
<DocumentFragment>
  .cache-1n9wgfw-Container-styles {
  padding: 24px;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 16px;
  background: #f1eefc;
  -webkit-background-position: right;
  background-position: right;
  background-repeat: no-repeat;
  -webkit-background-size: contain;
  background-size: contain;
}

.cache-1n9wgfw-Container-styles>svg:first-child,
.cache-1n9wgfw-Container-styles>img {
  height: 140px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.cache-1n9wgfw-Container-styles button[name='close'] {
  background: none;
}

.cache-1n9wgfw-Container-styles button[name='close']:hover {
  background: none;
}

.cache-hmn6z8-Stack-ImageStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 140px;
}

.cache-19d60zd-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1yytme-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-dwidc8-StyledText {
  color: #641cb3;
  font-size: 21px;
  font-family: Space Grotesk,Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-qnqg38-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1hgmfcr-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-bt0hmr-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #641cb3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-bt0hmr-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-bt0hmr-StyledLink>* {
  pointer-events: none;
}

.cache-bt0hmr-StyledLink:hover,
.cache-bt0hmr-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #521094;
  text-decoration-color: #521094;
}

.cache-bt0hmr-StyledLink:hover .e1afnb7a2,
.cache-bt0hmr-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-bt0hmr-StyledLink[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.cache-bt0hmr-StyledLink:hover::after,
.cache-bt0hmr-StyledLink:focus::after {
  background-color: #641cb3;
}

.cache-bt0hmr-StyledLink:active {
  text-decoration-thickness: 2px;
}

.cache-1tang38-StyledExternalIconContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-bottom: 4px;
}

.cache-1rr0th9-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 14px;
  width: 14px;
  min-width: 14px;
  min-height: 14px;
}

.cache-1xcp86l-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.cache-1xcp86l-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1xcp86l-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-1xcp86l-StyledGhostButton:hover,
.cache-1xcp86l-StyledGhostButton:active {
  background: #e9eaeb;
  color: #222638;
}

.cache-1ah7xw8-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    class="cache-1n9wgfw-Container-styles e1kdwp5x1"
  >
    <div
      class="cache-hmn6z8-Stack-ImageStack e1kdwp5x0"
    >
      <img
        alt=""
        src="test-file-stub"
      />
    </div>
    <div
      class="cache-19d60zd-Stack ehpbis70"
      style="flex: 1;"
    >
      <div
        class="cache-1yytme-Stack ehpbis70"
        style="flex: 1;"
      >
        <p
          class="cache-dwidc8-StyledText e13y3mga0"
        >
          Title
        </p>
        <p
          class="cache-qnqg38-StyledText e13y3mga0"
        >
          Description
        </p>
      </div>
      <div
        class="cache-1hgmfcr-Stack ehpbis70"
      >
        <a
          class="cache-bt0hmr-StyledLink e1afnb7a0"
          data-variant="standalone"
          href=""
          prominence="default"
          rel="noopener noreferrer"
          target="_blank"
        >
          Link
          <span
            class="cache-1tang38-StyledExternalIconContainer e1afnb7a1"
          >
            <svg
              class="e1afnb7a2 cache-1rr0th9-sizeStyles-StyledIcon e1gt4cfo0"
              viewBox="0 0 24 24"
            >
              <path
                d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
              />
            </svg>
          </span>
        </a>
      </div>
    </div>
    <button
      class="cache-1xcp86l-StyledGhostButton e112qvla0"
      name="close"
      type="button"
    >
      <svg
        class="cache-1ah7xw8-sizeStyles e1gt4cfo0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Banner renders correctly with an image 1`] = `
<DocumentFragment>
  .cache-1n9wgfw-Container-styles {
  padding: 24px;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 16px;
  background: #f1eefc;
  -webkit-background-position: right;
  background-position: right;
  background-repeat: no-repeat;
  -webkit-background-size: contain;
  background-size: contain;
}

.cache-1n9wgfw-Container-styles>svg:first-child,
.cache-1n9wgfw-Container-styles>img {
  height: 140px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.cache-1n9wgfw-Container-styles button[name='close'] {
  background: none;
}

.cache-1n9wgfw-Container-styles button[name='close']:hover {
  background: none;
}

.cache-hmn6z8-Stack-ImageStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 140px;
}

.cache-19d60zd-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1yytme-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-dwidc8-StyledText {
  color: #641cb3;
  font-size: 21px;
  font-family: Space Grotesk,Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-qnqg38-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1xcp86l-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.cache-1xcp86l-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1xcp86l-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-1xcp86l-StyledGhostButton:hover,
.cache-1xcp86l-StyledGhostButton:active {
  background: #e9eaeb;
  color: #222638;
}

.cache-1ah7xw8-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    class="cache-1n9wgfw-Container-styles e1kdwp5x1"
  >
    <div
      class="cache-hmn6z8-Stack-ImageStack e1kdwp5x0"
    >
      <img
        alt=""
        src="test-file-stub"
      />
    </div>
    <div
      class="cache-19d60zd-Stack ehpbis70"
      style="flex: 1;"
    >
      <div
        class="cache-1yytme-Stack ehpbis70"
        style="flex: 1;"
      >
        <p
          class="cache-dwidc8-StyledText e13y3mga0"
        >
          Title
        </p>
        <p
          class="cache-qnqg38-StyledText e13y3mga0"
        >
          Description
        </p>
      </div>
    </div>
    <button
      class="cache-1xcp86l-StyledGhostButton e112qvla0"
      name="close"
      type="button"
    >
      <svg
        class="cache-1ah7xw8-sizeStyles e1gt4cfo0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Banner renders correctly with closable to false 1`] = `
<DocumentFragment>
  .cache-1n9wgfw-Container-styles {
  padding: 24px;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 16px;
  background: #f1eefc;
  -webkit-background-position: right;
  background-position: right;
  background-repeat: no-repeat;
  -webkit-background-size: contain;
  background-size: contain;
}

.cache-1n9wgfw-Container-styles>svg:first-child,
.cache-1n9wgfw-Container-styles>img {
  height: 140px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.cache-1n9wgfw-Container-styles button[name='close'] {
  background: none;
}

.cache-1n9wgfw-Container-styles button[name='close']:hover {
  background: none;
}

.cache-hmn6z8-Stack-ImageStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 140px;
}

.cache-wbv6k9-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1yytme-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-dwidc8-StyledText {
  color: #641cb3;
  font-size: 21px;
  font-family: Space Grotesk,Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-qnqg38-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-1n9wgfw-Container-styles e1kdwp5x1"
  >
    <div
      class="cache-hmn6z8-Stack-ImageStack e1kdwp5x0"
    >
      <img
        alt=""
        src="test-file-stub"
      />
    </div>
    <div
      class="cache-wbv6k9-Stack ehpbis70"
      style="flex: 1;"
    >
      <div
        class="cache-1yytme-Stack ehpbis70"
        style="flex: 1;"
      >
        <p
          class="cache-dwidc8-StyledText e13y3mga0"
        >
          Title
        </p>
        <p
          class="cache-qnqg38-StyledText e13y3mga0"
        >
          Description
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Banner renders correctly with default values 1`] = `
<DocumentFragment>
  .cache-1n9wgfw-Container-styles {
  padding: 24px;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 16px;
  background: #f1eefc;
  -webkit-background-position: right;
  background-position: right;
  background-repeat: no-repeat;
  -webkit-background-size: contain;
  background-size: contain;
}

.cache-1n9wgfw-Container-styles>svg:first-child,
.cache-1n9wgfw-Container-styles>img {
  height: 140px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.cache-1n9wgfw-Container-styles button[name='close'] {
  background: none;
}

.cache-1n9wgfw-Container-styles button[name='close']:hover {
  background: none;
}

.cache-hmn6z8-Stack-ImageStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 140px;
}

.cache-19d60zd-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1yytme-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-dwidc8-StyledText {
  color: #641cb3;
  font-size: 21px;
  font-family: Space Grotesk,Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-qnqg38-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1xcp86l-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.cache-1xcp86l-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1xcp86l-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-1xcp86l-StyledGhostButton:hover,
.cache-1xcp86l-StyledGhostButton:active {
  background: #e9eaeb;
  color: #222638;
}

.cache-1ah7xw8-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    class="cache-1n9wgfw-Container-styles e1kdwp5x1"
  >
    <div
      class="cache-hmn6z8-Stack-ImageStack e1kdwp5x0"
    >
      <img
        alt=""
        src="test-file-stub"
      />
    </div>
    <div
      class="cache-19d60zd-Stack ehpbis70"
      style="flex: 1;"
    >
      <div
        class="cache-1yytme-Stack ehpbis70"
        style="flex: 1;"
      >
        <p
          class="cache-dwidc8-StyledText e13y3mga0"
        >
          Title
        </p>
        <p
          class="cache-qnqg38-StyledText e13y3mga0"
        >
          Description
        </p>
      </div>
    </div>
    <button
      class="cache-1xcp86l-StyledGhostButton e112qvla0"
      name="close"
      type="button"
    >
      <svg
        class="cache-1ah7xw8-sizeStyles e1gt4cfo0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Banner renders correctly with direction row 1`] = `
<DocumentFragment>
  .cache-1n9wgfw-Container-styles {
  padding: 24px;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 16px;
  background: #f1eefc;
  -webkit-background-position: right;
  background-position: right;
  background-repeat: no-repeat;
  -webkit-background-size: contain;
  background-size: contain;
}

.cache-1n9wgfw-Container-styles>svg:first-child,
.cache-1n9wgfw-Container-styles>img {
  height: 140px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.cache-1n9wgfw-Container-styles button[name='close'] {
  background: none;
}

.cache-1n9wgfw-Container-styles button[name='close']:hover {
  background: none;
}

.cache-hmn6z8-Stack-ImageStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 140px;
}

.cache-wbv6k9-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1yytme-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-dwidc8-StyledText {
  color: #641cb3;
  font-size: 21px;
  font-family: Space Grotesk,Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-qnqg38-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1xcp86l-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.cache-1xcp86l-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1xcp86l-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-1xcp86l-StyledGhostButton:hover,
.cache-1xcp86l-StyledGhostButton:active {
  background: #e9eaeb;
  color: #222638;
}

.cache-1ah7xw8-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    class="cache-1n9wgfw-Container-styles e1kdwp5x1"
  >
    <div
      class="cache-hmn6z8-Stack-ImageStack e1kdwp5x0"
    >
      <img
        alt=""
        src="test-file-stub"
      />
    </div>
    <div
      class="cache-wbv6k9-Stack ehpbis70"
      style="flex: 1;"
    >
      <div
        class="cache-1yytme-Stack ehpbis70"
        style="flex: 1;"
      >
        <p
          class="cache-dwidc8-StyledText e13y3mga0"
        >
          Title
        </p>
        <p
          class="cache-qnqg38-StyledText e13y3mga0"
        >
          Description
        </p>
      </div>
    </div>
    <button
      class="cache-1xcp86l-StyledGhostButton e112qvla0"
      name="close"
      type="button"
    >
      <svg
        class="cache-1ah7xw8-sizeStyles e1gt4cfo0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Banner sizes and variants renders correctly with size medium and variant intro 1`] = `
<DocumentFragment>
  .cache-1n9wgfw-Container-styles {
  padding: 24px;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 16px;
  background: #f1eefc;
  -webkit-background-position: right;
  background-position: right;
  background-repeat: no-repeat;
  -webkit-background-size: contain;
  background-size: contain;
}

.cache-1n9wgfw-Container-styles>svg:first-child,
.cache-1n9wgfw-Container-styles>img {
  height: 140px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.cache-1n9wgfw-Container-styles button[name='close'] {
  background: none;
}

.cache-1n9wgfw-Container-styles button[name='close']:hover {
  background: none;
}

.cache-hmn6z8-Stack-ImageStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 140px;
}

.cache-19d60zd-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1yytme-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-dwidc8-StyledText {
  color: #641cb3;
  font-size: 21px;
  font-family: Space Grotesk,Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-qnqg38-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1xcp86l-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.cache-1xcp86l-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1xcp86l-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-1xcp86l-StyledGhostButton:hover,
.cache-1xcp86l-StyledGhostButton:active {
  background: #e9eaeb;
  color: #222638;
}

.cache-1ah7xw8-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    class="cache-1n9wgfw-Container-styles e1kdwp5x1"
  >
    <div
      class="cache-hmn6z8-Stack-ImageStack e1kdwp5x0"
    >
      <img
        alt=""
        src="test-file-stub"
      />
    </div>
    <div
      class="cache-19d60zd-Stack ehpbis70"
      style="flex: 1;"
    >
      <div
        class="cache-1yytme-Stack ehpbis70"
        style="flex: 1;"
      >
        <p
          class="cache-dwidc8-StyledText e13y3mga0"
        >
          Title
        </p>
        <p
          class="cache-qnqg38-StyledText e13y3mga0"
        >
          Description
        </p>
      </div>
    </div>
    <button
      class="cache-1xcp86l-StyledGhostButton e112qvla0"
      name="close"
      type="button"
    >
      <svg
        class="cache-1ah7xw8-sizeStyles e1gt4cfo0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Banner sizes and variants renders correctly with size medium and variant promotional 1`] = `
<DocumentFragment>
  .cache-1texvn3-Container-styles {
  padding: 24px;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 16px;
  background-image: linear-gradient(151deg, #03cfda 0%, #3d1862 28.91%, #151a2d 75.01%);
  -webkit-background-position: right;
  background-position: right;
  background-repeat: no-repeat;
  -webkit-background-size: contain;
  background-size: contain;
}

.cache-1texvn3-Container-styles>svg:first-child,
.cache-1texvn3-Container-styles>img {
  height: 140px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.cache-1texvn3-Container-styles button[name='close'] {
  background: none;
}

.cache-1texvn3-Container-styles button[name='close']:hover {
  background: none;
}

.cache-hmn6z8-Stack-ImageStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 140px;
}

.cache-19d60zd-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1yytme-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1f4rn7b-StyledText {
  color: #ffffff;
  font-size: 21px;
  font-family: Space Grotesk,Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-19ma3ne-StyledText {
  color: #ffffff;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-13hzq4w-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: #8c40ef;
  border: none;
  color: #ffffff;
}

.cache-13hzq4w-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-13hzq4w-StyledFilledButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-13hzq4w-StyledFilledButton:hover,
.cache-13hzq4w-StyledFilledButton:active {
  background: #792dd4;
  color: #f9f9fa;
}

.cache-1ah7xw8-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    class="cache-1texvn3-Container-styles e1kdwp5x1"
  >
    <div
      class="cache-hmn6z8-Stack-ImageStack e1kdwp5x0"
    >
      <img
        alt=""
        src="test-file-stub"
      />
    </div>
    <div
      class="cache-19d60zd-Stack ehpbis70"
      style="flex: 1;"
    >
      <div
        class="cache-1yytme-Stack ehpbis70"
        style="flex: 1;"
      >
        <p
          class="cache-1f4rn7b-StyledText e13y3mga0"
        >
          Title
        </p>
        <p
          class="cache-19ma3ne-StyledText e13y3mga0"
        >
          Description
        </p>
      </div>
    </div>
    <button
      class="cache-13hzq4w-StyledFilledButton e112qvla2"
      name="close"
      type="button"
    >
      <svg
        class="cache-1ah7xw8-sizeStyles e1gt4cfo0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Banner sizes and variants renders correctly with size small and variant intro 1`] = `
<DocumentFragment>
  .cache-1n2fykg-Container-styles {
  padding: 16px;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 16px;
  background: #f1eefc;
  -webkit-background-position: left,right;
  background-position: left,right;
  background-repeat: no-repeat,no-repeat;
  -webkit-background-size: contain,contain;
  background-size: contain,contain;
}

.cache-1n2fykg-Container-styles>svg:first-child,
.cache-1n2fykg-Container-styles>img {
  height: 100px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.cache-1n2fykg-Container-styles button[name='close'] {
  background: none;
}

.cache-1n2fykg-Container-styles button[name='close']:hover {
  background: none;
}

.cache-37jj6f-Stack-ImageStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 74px;
}

.cache-19d60zd-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1yytme-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-18fd44c-StyledText {
  color: #641cb3;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 600;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-qnqg38-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1xcp86l-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.cache-1xcp86l-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1xcp86l-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-1xcp86l-StyledGhostButton:hover,
.cache-1xcp86l-StyledGhostButton:active {
  background: #e9eaeb;
  color: #222638;
}

.cache-1ah7xw8-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    class="cache-1n2fykg-Container-styles e1kdwp5x1"
  >
    <div
      class="cache-37jj6f-Stack-ImageStack e1kdwp5x0"
    >
      <img
        alt=""
        src="test-file-stub"
      />
    </div>
    <div
      class="cache-19d60zd-Stack ehpbis70"
      style="flex: 1;"
    >
      <div
        class="cache-1yytme-Stack ehpbis70"
        style="flex: 1;"
      >
        <p
          class="cache-18fd44c-StyledText e13y3mga0"
        >
          Title
        </p>
        <p
          class="cache-qnqg38-StyledText e13y3mga0"
        >
          Description
        </p>
      </div>
    </div>
    <button
      class="cache-1xcp86l-StyledGhostButton e112qvla0"
      name="close"
      type="button"
    >
      <svg
        class="cache-1ah7xw8-sizeStyles e1gt4cfo0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Banner sizes and variants renders correctly with size small and variant promotional 1`] = `
<DocumentFragment>
  .cache-ylo50y-Container-styles {
  padding: 16px;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 16px;
  -webkit-background-position: left,right;
  background-position: left,right;
  background-image: linear-gradient(151deg, #03cfda 0%, #3d1862 28.91%, #151a2d 75.01%);
  background-repeat: no-repeat,no-repeat;
  -webkit-background-size: contain,contain;
  background-size: contain,contain;
}

.cache-ylo50y-Container-styles>svg:first-child,
.cache-ylo50y-Container-styles>img {
  height: 100px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.cache-ylo50y-Container-styles button[name='close'] {
  background: none;
}

.cache-ylo50y-Container-styles button[name='close']:hover {
  background: none;
}

.cache-37jj6f-Stack-ImageStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 74px;
}

.cache-19d60zd-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1yytme-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1wdc4om-StyledText {
  color: #ffffff;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 600;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-19ma3ne-StyledText {
  color: #ffffff;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-13hzq4w-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: #8c40ef;
  border: none;
  color: #ffffff;
}

.cache-13hzq4w-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-13hzq4w-StyledFilledButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-13hzq4w-StyledFilledButton:hover,
.cache-13hzq4w-StyledFilledButton:active {
  background: #792dd4;
  color: #f9f9fa;
}

.cache-1ah7xw8-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    class="cache-ylo50y-Container-styles e1kdwp5x1"
  >
    <div
      class="cache-37jj6f-Stack-ImageStack e1kdwp5x0"
    >
      <img
        alt=""
        src="test-file-stub"
      />
    </div>
    <div
      class="cache-19d60zd-Stack ehpbis70"
      style="flex: 1;"
    >
      <div
        class="cache-1yytme-Stack ehpbis70"
        style="flex: 1;"
      >
        <p
          class="cache-1wdc4om-StyledText e13y3mga0"
        >
          Title
        </p>
        <p
          class="cache-19ma3ne-StyledText e13y3mga0"
        >
          Description
        </p>
      </div>
    </div>
    <button
      class="cache-13hzq4w-StyledFilledButton e112qvla2"
      name="close"
      type="button"
    >
      <svg
        class="cache-1ah7xw8-sizeStyles e1gt4cfo0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;
